ecmascript/parser/tests/test262-error-references/fail/f3051ae9c2c9acf6.js.stderr
error: Unexpected token Some(LParen)
 --> $DIR/tests/test262-parser/fail/f3051ae9c2c9acf6.js:1:3
  |
1 | ({(a)} = 0)
  |   ^

